sidenavbar nav links overlap fix attempt 1

--- a/src/scss/sidenavbar.scss
+++ b/src/scss/sidenavbar.scss
@@ -115,9 +115,10 @@
       }
       .nav {
         position: relative;
-        margin: 10% 0 5% 0;
+        margin: 10% 0 15% 0;
         height: 40%;
-        max-height: 250px;
+        min-height: 150px;
+        max-height: 300px;
 
         .link-wrapper {
           height: 20%;
@@ -138,14 +139,11 @@
       }
 
       .social {
-        position: absolute;
+        position: relative;
         background-color: transparent;
         width: 95%;
         height: 10%;
-        left: 50%;
-        right: 50%;
-        transform: translate(-50%);
-        bottom: 0;
+        bottom: 15%;
         margin: 10% 0 0 0;
         text-align: center;
         opacity: 0;
