--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -25,6 +25,7 @@
   width: 82%;
   height: 100%;
   text-align: center;
+  overflow-x: hidden;
 }
 
 .home label {
